MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/BBCRM__BuzzBoard_Setting__c.object-meta.xml
<CustomObject>
    <label>BuzzBoard Setting</label>
    <nameField>
        <label>BuzzBoard Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BuzzBoard Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>