MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Audit_Status__c</fullName>
    <label>Audit Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>