MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__BB_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BB_Opportunity_URL__c</fullName>
    <label>BB Opportunity URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>