MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__BB_Package_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BB_Package_Upgrade__c</fullName>
    <label>BB Package Upgrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>