MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__BBInstances__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BBInstances__c</fullName>
    <label>BBInstances</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>