MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__bblogs__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__bblogs__c</fullName>
    <label>bblogs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>