MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__BulkListingUrl__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BulkListingUrl__c</fullName>
    <label>BulkListingUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>