MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__ListingUrl__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__ListingUrl__c</fullName>
    <label>ListingUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>