MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__Partner_Key__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Partner_Key__c</fullName>
    <label>Partner Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>