MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__Sync_Key__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Sync_Key__c</fullName>
    <label>Sync_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>