MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__Sync_New_Page__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Sync_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Page will appear when this field checked.</description>
    <label>Sync New Page</label>
    <type>Checkbox</type>
</CustomField>