MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__User_Remove_Url__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__User_Remove_Url__c</fullName>
    <label>User Remove Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>