MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Setting__c/fields/BBCRM__UserMap__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__UserMap__c</fullName>
    <label>UserMap</label>
    <length>200</length>
    <type>Text</type>
</CustomField>